codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__safety_buffering_side_conversation_without_retry.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: popup
---
• Working (0s • esc to interrupt)
  └ Our systems are thinking a bit more about this request before responding.


› Ask a follow-up question

  GPT-5.6-Sol default · /tmp/project
